# kilt-node

./: Cargo.toml
ci/: build.sh  deploy.sh  lib-env.sh  push-image.sh  runall.sh
nodes/parachain/: Cargo.toml
nodes/parachain/src/: rpc.rs
nodes/standalone/: Cargo.toml
nodes/standalone/src/: service.rs
pallets/attestation/: Cargo.toml
pallets/ctype/: Cargo.toml
pallets/delegation/: Cargo.toml
pallets/delegation/src/: mock.rs
pallets/did/: Cargo.toml
pallets/did/src/: did_details.rs  lib.rs  mock.rs
pallets/kilt-launch/: Cargo.toml
pallets/kilt-launch/src/: default_weights.rs
pallets/pallet-did-lookup/: Cargo.toml
pallets/pallet-did-lookup/src/: account.rs  benchmarking.rs  lib.rs  mock.rs  signature.rs
pallets/parachain-staking/src/: lib.rs  set.rs  tests.rs
runtimes/common/: Cargo.toml
runtimes/common/src/: did.rs  lib.rs
runtimes/peregrine/src/: lib.rs  tests.rs
runtimes/spiritnet/src/: lib.rs  tests.rs
runtimes/standalone/: Cargo.toml
runtimes/standalone/src/: access_control.rs  lib.rs
scripts/: build-docker-via-cargo-wharf.sh
