# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2

[package.metadata.wharf.builder]
image = "paritytech/ci-linux:105b919b-20210617 as builder"
user = "root"
target = "release/kilt-parachain"
post-install-commands = [
  { shell = "useradd -m -u 1000 -U -s /bin/sh -d /node node && mkdir -p /node/.local/share/node && chown -R node:node /node/.local && ln -s /node/.local/share/node /data && rm -rf /usr/bin /usr/sbin" },

]
[package]
name = "mashnet-node"
version = "0.1.0"

[[bin]]
name = "test"
path = "src/tests.rs"

[package.metadata.wharf.output]
image = "scratch"
expose = ["30333", "9933", "9944"]
volumes = ["/data"]
entrypoint = ["/usr/local/bin/node-executable", "-c"]

[profile.release]
panic = "unwind"

[workspace]
members = [
  "nodes/*",
  "pallets/*",
  "runtimes/*",
]

[patch.'https://github.com/paritytech/substrate?branch=rococo-v1']
frame-metadata = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
frame-support = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
frame-support-procedural = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
frame-support-procedural-tools = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
frame-support-procedural-tools-derive = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-application-crypto = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-arithmetic = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-core = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-debug-derive = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-externalities = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-inherents = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-io = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-panic-handler = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-runtime = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-runtime-interface = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-runtime-interface-proc-macro = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-staking = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-state-machine = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-std = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-storage = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-tracing = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-trie = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
sp-wasm-interface = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5"}
