[package]
authors = ["KILT <info@kilt.io>"]
description = "Lookup the DID for a blockchain account."
edition = "2021"
name = "pallet-did-lookup"
repository = "https://github.com/KILTprotocol/mashnet-node"
version = "1.6.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
kilt-support = {features = ["mock"], path = "../../support"}

pallet-balances = {branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate"}
sp-core = {branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate"}
sp-io = {branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate"}
sp-keystore = {branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate"}

[dependencies]
codec = {package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"]}
log = "0.4.16"
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
sha3 = { version = "0.9", default-features = false }
impl-serde = { version = "0.3.1", default-features = false }
serde = { version = "1.0.101", default-features = false, features = [ "derive" ] }
libsecp256k1 = { version = "0.6", default-features = false, features = [ "hmac" ] }
hex = { version = "0.4", default-features = false }

# KILT
kilt-support = {default-features = false, path = "../../support"}

# Substrate dependencies
frame-support = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}
frame-system = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-runtime = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-std = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-core = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-io = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}

# benchmarking
frame-benchmarking = {branch = "polkadot-v0.9.19", optional = true, default-features = false, git = "https://github.com/paritytech/substrate"}

[features]
default = ["std"]

runtime-benchmarks = [
  "frame-benchmarking",
  "kilt-support/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]

std = [
  "codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
	"impl-serde/std",
]

try-runtime = [
  "frame-support/try-runtime",
  "kilt-support/try-runtime",
]
